--- a/gradle.properties
+++ b/gradle.properties
@@ -15,19 +15,19 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.0
+mod_version = 2.0.0-1.12.2
 root_package = com.nymoo
 mod_id = afp
 mod_name = Atom: Fusion Protocol
 
 # Mod Metadata (Optional)
-mod_description =
-mod_url =
+mod_description = A mod that adds nuclear-powered power armor and the ability to upgrade it
+mod_url = https://github.com/neoNymOo/Atom-Fusion-Protocol
 mod_update_json =
 # Delimit authors with commas
 mod_authors = NymOo
-mod_credits =
-mod_logo_path = assets/afp/textures/logo.png
+mod_credits = I would like to express my deep gratitude to everyone whose work inspired and supported the development of this mod:\n1) Fallout Inspired Power Armor:\n   Adopted all Power Armor 3D models and select sound effects. Primary inspiration for this project.\n2) Hbm's Nuclear Tech - Extended Edition:\n   Utilized certain resources and code elements. Their codebase served as invaluable learning material during development.\n3) niiwork studio:\n   Created the 3D model and animations for the docking station.\nWithout your effort and contribution, this mod would never have come to life. Thank you!
+mod_logo_path = assets/afp/textures/other/logo.png
 
 # Mapping Properties
 mapping_channel = stable
