--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,8 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 2.0.0-1.12.2
+mod_version = 2.0.0
+mc_version = 1.12.2
 root_package = com.nymoo
 mod_id = afp
 mod_name = Atom: Fusion Protocol
@@ -27,7 +28,8 @@ mod_update_json =
 # Delimit authors with commas
 mod_authors = NymOo
 mod_credits = I would like to express my deep gratitude to everyone whose work inspired and supported the development of this mod:\n1) Fallout Inspired Power Armor:\n   Adopted all Power Armor 3D models and select sound effects. Primary inspiration for this project.\n2) Hbm's Nuclear Tech - Extended Edition:\n   Utilized certain resources and code elements. Their codebase served as invaluable learning material during development.\n3) niiwork studio:\n   Created the 3D model and animations for the docking station.\nWithout your effort and contribution, this mod would never have come to life. Thank you!
-mod_logo_path = assets/afp/textures/other/logo.png
+mod_logo_path = assets/afp/textures/misc/logo.png
+mod_dependencies = n
 
 # Mapping Properties
 mapping_channel = stable
@@ -109,6 +111,7 @@ mixin_configs = ${mod_id}
 # A refmap is a json that denotes mapping conversions, this json is generated automatically, with the name `mixins.mod_id.refmap.json`
 # Use the property `mixin_refmap` if you want it to use a different name, only one name is accepted
 mixin_refmap = mixins.${mod_id}.refmap.json
+mixin_package = com.nymoo.afp.common.mixin.impl
 
 # Coremods
 # The most powerful way to change java classes at runtime, it is however very primitive with little documentation.
@@ -117,7 +120,7 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # You MUST state a class name for `coremod_plugin_class_name` if you are making a coremod, the class should implement `IFMLLoadingPlugin`
 is_coremod=true
 coremod_includes_mod = true
-coremod_plugin_class_name=com.nymoo.afp.common.mixins.AFPMixinLoader
+coremod_plugin_class_name= com.nymoo.afp.common.mixin.MixinLoader
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
 # Documentation: https://github.com/CleanroomMC/AssetMover
