--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_update_json =
 mod_authors = NymOo
 mod_credits = I would like to express my deep gratitude to everyone whose work inspired and supported the development of this mod:\n1) Fallout Inspired Power Armor:\n   Adopted all Power Armor 3D models and select sound effects. Primary inspiration for this project.\n2) Hbm's Nuclear Tech - Extended Edition:\n   Utilized certain resources and code elements. Their codebase served as invaluable learning material during development.\n3) niiwork studio:\n   Created the 3D model and animations for the docking station.\nWithout your effort and contribution, this mod would never have come to life. Thank you!
 mod_logo_path = assets/afp/textures/misc/logo.png
-mod_dependencies = n
+mod_dependencies = Z
 
 # Mapping Properties
 mapping_channel = stable
